human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_6.wast
(assert_malformed
  (module quote
    "(func (i32.const 0) (loop (result i32) (param i32)))"
  )
  "unexpected token"
)